<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_edit_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name_hint"
            android:layout_marginBottom="@dimen/field_separation_margin"
            android:layout_marginHorizontal="@dimen/horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/semester_edit_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/semester_hint"
            android:layout_marginBottom="@dimen/field_separation_margin"
            android:layout_marginHorizontal="@dimen/horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/semester_edit_text_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="0"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nationality_edit_dropdown_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/nationality_hint"
            android:layout_marginHorizontal="@dimen/horizontal_margin">

            <AutoCompleteTextView
                android:id="@+id/nationality_edit_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/bottom_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>